changed col width to 12, for jumbotron, created cards for tables page

--- a/html/tables.html
+++ b/html/tables.html
@@ -11,6 +11,43 @@
 
 </head>
 <body>
+<!-- Main Container -->
+<div class="container">
+	<!-- Top Jumbotron -->
+	<div class="row justify-content-center">
+		<div class="col-12">
+			<div class="jumbotron">
+		  		<h1 class="display-4">Hot Resaurant</h1>
+		  		<p class="lead">Make a reservation</p>
+		  		<hr class="my-4">
+		  		<p>We only have 5 tables! Book your seat before they all are gone!
+				</p>
+		  		<p class="lead">
+		   			<a class="btn btn-primary btn-lg" href="#" role="button">Home</a>
+		   			<a class="btn btn-primary btn-lg" href="#" role="button">Make a reservation</a>
+		  		</p>
+			</div>
+		</div>
+	</div>
+	<!-- /Top Jumbotron -->
+	<!-- Current Reservations Card -->
+	<div class="card">
+	  <h5 class="card-header">Current Reservations</h5>
+	  <div class="card-body">
+	    <p class="card-text"></p>
+	  </div>
+	</div>
+	<!-- /Current Reservations Card -->
+	<!-- Waiting List Card -->
+	<div class="card">
+	  <h5 class="card-header">Waiting List</h5>
+	  <div class="card-body">
+	    <p class="card-text"></p>
+	  </div>
+	</div>
+	<!-- /Waiting List Card -->
+</div>
+<!-- /Main Container -->
 
 
 
