--- a/html/reserve.html
+++ b/html/reserve.html
@@ -13,7 +13,27 @@
 
 </head>
 <body>
-
+<!-- Main Container -->
+<div class="container">
+	<!-- Top Jumbotron -->
+	<div class="row justify-content-center">
+		<div class="col-12">
+			<div class="jumbotron">
+		  		<h1 class="display-4">Hot Resaurant</h1>
+		  		<p class="lead">Make a reservation</p>
+		  		<hr class="my-4">
+		  		<p>We only have 5 tables! Book your seat before they all are gone!
+				</p>
+		  		<p class="lead">
+		   			<a class="btn btn-primary btn-lg" href="#" role="button">View Tables</a>
+		   			<a class="btn btn-primary btn-lg" href="#" role="button">Home</a>
+		  		</p>
+			</div>
+		</div>
+	</div>
+	<!-- /Top Jumbotron -->
+</div>
+<!-- /Main Container -->
 
 
 </body>
