changed index link

--- a/html/reserve.html
+++ b/html/reserve.html
@@ -16,7 +16,7 @@
 <!-- Main Container -->
   <div class="container">
 	<!-- Top Jumbotron -->
-	<div class="row justify-content-center">
+	<div class="row text-center">
 		<div class="col-12">
 			<div class="jumbotron">
 		  		<h1 class="display-4">Hot Resaurant</h1>
@@ -25,8 +25,8 @@
 		  		<p>We only have 5 tables! Book your seat before they all are gone!
 				</p>
 		  		<p class="lead">
-		   			<a class="btn btn-primary btn-lg" href="tables.html" role="button">View Tables</a>
-		   			<a class="btn btn-primary btn-lg" href="index.html" role="button">Home</a>
+		   			<a class="btn btn-primary btn-lg" href="./tables.html" role="button">View Tables</a>
+		   			<a class="btn btn-primary btn-lg" href="/" role="button">Home</a>
 		  		</p>
 			</div>
 		</div>
