--- a/html/tables.html
+++ b/html/tables.html
@@ -23,7 +23,7 @@
 		  		<p>We only have 5 tables! Book your seat before they all are gone!
 				</p>
 		  		<p class="lead">
-		   			<a class="btn btn-primary btn-lg" href="index.html" role="button">Home</a>
+		   			<a class="btn btn-primary btn-lg" href="/" role="button">Home</a>
 		   			<a class="btn btn-primary btn-lg" href="reserve.html" role="button">Make a reservation</a>
 		  		</p>
 			</div>
