--- a/html/reserve.html
+++ b/html/reserve.html
@@ -4,21 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hot Restaurant</title>
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+<link rel="stylesheet" href="../assets/style.css">
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
-
-
-
 </head>
 <body>
 <!-- Main Container -->
   <div class="container">
 	<!-- Top Jumbotron -->
-	<div class="row justify-content-center">
+	<div class="row justify-text-center">
 		<div class="col-12">
-			<div class="jumbotron">
+			<div class="jumbotron main-jumbo">
 		  		<h1 class="display-4">Hot Resaurant</h1>
 		  		<p class="lead">Make a reservation</p>
 		  		<hr class="my-4">
@@ -44,7 +43,7 @@
             <input type="email" class="form-control" id="email-address" placeholder="name@example.com">
           </div>
           <div class="form-group">
-            <label for="phone-number"></label>
+            <label for="phone-number">Phone Number</label>
             <input type="tel" class="form-control" id="phone-number" placeholder="XXX-XXX-XXXX">
           </div>
           <div class="form-group">
