--- a/html/index.html
+++ b/html/index.html
@@ -30,6 +30,8 @@
 		</div>
 	</div>
 	<!-- /Top Jumbotron -->
+	<a href="/api/tables">View Tables</a>
+	<a href="/api/waitlist">View Waitlist</a>
 </div>
 <!-- /Main Container -->
 
