--- a/html/reserve.html
+++ b/html/reserve.html
@@ -56,8 +56,8 @@
       </div>
   </div>
 <!-- /Form -->
->>>>>>> ccc6b130ef7c4b953926e43cf103fc7a189a82bc
-</div>
+<a href="/api/tables">View Tables</a>
+<a href="/api/waitlist">View Waitlist</a></div>
 <!-- /Main Container -->
 </body>
 </html>
