--- a/html/tables.html
+++ b/html/tables.html
@@ -46,6 +46,8 @@
 	  </div>
 	</div>
 	<!-- /Waiting List Card -->
+	<a href="/api/tables">View Tables</a>
+	<a href="/api/waitlist">View Waitlist</a>	
 </div>
 <!-- /Main Container -->
 
