--- a/html/tables.html
+++ b/html/tables.html
@@ -1,57 +1,65 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hot Restaurant</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Hot Restaurant</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+	    crossorigin="anonymous">
+	<link rel="stylesheet" href="../assets/style.css">
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+	    crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+	    crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
+	    crossorigin="anonymous"></script>
 
 </head>
+
 <body>
-<!-- Main Container -->
-<div class="container">
-	<!-- Top Jumbotron -->
-	<div class="row justify-content-center">
-		<div class="col-12">
-			<div class="jumbotron">
-		  		<h1 class="display-4">Hot Resaurant</h1>
-		  		<p class="lead">Make a reservation</p>
-		  		<hr class="my-4">
-		  		<p>We only have 5 tables! Book your seat before they all are gone!
-				</p>
-		  		<p class="lead">
-		   			<a class="btn btn-primary btn-lg" href="/" role="button">Home</a>
-		   			<a class="btn btn-primary btn-lg" href="reserve.html" role="button">Make a reservation</a>
-		  		</p>
+	<!-- Main Container -->
+	<div class="container">
+		<!-- Top Jumbotron -->
+		<div class="row justify-content-center">
+			<div class="col-12">
+				<div class="jumbotron">
+					<h1 class="display-4">Hot Resaurant</h1>
+					<p class="lead">Make a reservation</p>
+					<hr class="my-4">
+					<p>We only have 5 tables! Book your seat before they all are gone!
+					</p>
+					<p class="lead">
+						<a class="btn btn-primary btn-lg" href="/" role="button">Home</a>
+						<a class="btn btn-primary btn-lg" href="reserve.html" role="button">Make a reservation</a>
+					</p>
+				</div>
 			</div>
 		</div>
+		<!-- /Top Jumbotron -->
+		<!-- Current Reservations Card -->
+		<div class="card">
+			<h5 class="card-header">Current Reservations</h5>
+			<div class="card-body">
+				<p class="card-text"></p>
+			</div>
+		</div>
+		<!-- /Current Reservations Card -->
+		<!-- Waiting List Card -->
+		<div class="card">
+			<h5 class="card-header">Waiting List</h5>
+			<div class="card-body">
+				<p class="card-text"></p>
+			</div>
+		</div>
+		<!-- /Waiting List Card -->
+		<a href="/api/tables">View Tables</a>
+		<a href="/api/waitlist">View Waitlist</a>
 	</div>
-	<!-- /Top Jumbotron -->
-	<!-- Current Reservations Card -->
-	<div class="card">
-	  <h5 class="card-header">Current Reservations</h5>
-	  <div class="card-body">
-	    <p class="card-text"></p>
-	  </div>
-	</div>
-	<!-- /Current Reservations Card -->
-	<!-- Waiting List Card -->
-	<div class="card">
-	  <h5 class="card-header">Waiting List</h5>
-	  <div class="card-body">
-	    <p class="card-text"></p>
-	  </div>
-	</div>
-	<!-- /Waiting List Card -->
-	<a href="/api/tables">View Tables</a>
-	<a href="/api/waitlist">View Waitlist</a>	
-</div>
-<!-- /Main Container -->
+	<!-- /Main Container -->
 
 
 
 </body>
+
 </html>
