added class name to jumbotron on tables.html

--- a/html/tables.html
+++ b/html/tables.html
@@ -22,7 +22,7 @@
 		<!-- Top Jumbotron -->
 		<div class="row justify-content-center">
 			<div class="col-12">
-				<div class="jumbotron">
+				<div class="jumbotron main-jumbo">
 					<h1 class="display-4">Hot Resaurant</h1>
 					<p class="lead">Make a reservation</p>
 					<hr class="my-4">
