--- a/html/index.html
+++ b/html/index.html
@@ -24,6 +24,7 @@
 		<div class="row justify-content-center">
 			<div class="col-12">
 				<div class="jumbotron main-jumbo">
+					<img src="../assets/fire.svg" width="100" height="100">
 					<h1 class="display-4">Hot Resaurant</h1>
 					<p class="lead">Make a reservation</p>
 					<hr class="my-4">
