--- a/html/reserve.html
+++ b/html/reserve.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
     crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="../assets/style.css">
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
@@ -24,14 +25,15 @@
     <div class="row justify-text-center">
       <div class="col-12">
         <div class="jumbotron main-jumbo">
+          <img src="../assets/fire.svg" width="100" height="100">
           <h1 class="display-4">Hot Resaurant</h1>
           <p class="lead">Make a reservation</p>
           <hr class="my-4">
           <p>We only have 5 tables! Book your seat before they all are gone!
           </p>
           <p class="lead">
-            <a class="btn btn-primary btn-lg" href="./tables.html" role="button">View Tables</a>
             <a class="btn btn-primary btn-lg" href="/" role="button">Home</a>
+            <a class="btn btn-primary btn-lg" href="./tables.html" role="button">View Tables</a>
           </p>
         </div>
       </div>
