pushing starting get function

--- a/html/tables.html
+++ b/html/tables.html
@@ -40,7 +40,9 @@
 		<div class="card">
 			<h5 class="card-header">Current Reservations</h5>
 			<div class="card-body">
-				<p class="card-text"></p>
+				<div id="reso">
+
+				</div>
 			</div>
 		</div>
 		<!-- /Current Reservations Card -->
