--- a/html/reserve.html
+++ b/html/reserve.html
@@ -42,6 +42,10 @@
       <h5 class="card-header">Make a reservation</h5>
       <div class="col-12">
         <form>
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name">
+              </div>
           <div class="form-group">
             <label for="email-address">Email address</label>
             <input type="email" class="form-control" id="email-address" placeholder="name@example.com">
