--- a/html/reserve.html
+++ b/html/reserve.html
@@ -78,12 +78,12 @@
         name: $("#name").val().trim(),
         email: $("#email-address").val().trim(),
         age: $("#phone-number").val().trim(),
-        forcePoints: $("#special-requests").val().trim()
+        specReservations: $("#special-requests").val().trim()
       };
       $.post("/api/tables", newReso)
       .then(function(data) {
         console.log(data);
-        alert("Adding character...");
+        alert("Adding reservation...");
       });
     });
   </script>
