--- a/html/tables.html
+++ b/html/tables.html
@@ -60,13 +60,16 @@
 	</div>
 	<!-- /Main Container -->
 
-
+	<script
+	src="http://code.jquery.com/jquery-3.3.1.js"
+	integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+	crossorigin="anonymous"></script>
 <script>
 	const runTableQuery = () => {
 		let currentUrl = window.location.origin;
 		$.ajax({
 			url: currentUrl + "/api/tables",
-			method: "GET"
+			type: "GET"
 		}).done((tableData)=> {
 			console.log("URL: " + currentUrl + "/api/tables");
 			console.log(tableData)
